fix box sizing and footer spacing for mobile

--- a/source/css/style.scss
+++ b/source/css/style.scss
@@ -25,6 +25,13 @@ $small-number: 10px; // for small paddings and margins
   }
 }
 
+// I like my Box sizing non-horrible, thank you
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
+
 // Page spacial structure
 
 html {
@@ -65,6 +72,8 @@ footer {
   bottom: 0;
   width: 100%;
   height: $footer-height;
+  padding-left: $small-number;
+  padding-right: $small-number;
 
   .logo {
     font-family: $font-family-sans;
@@ -79,8 +88,8 @@ footer {
     position: absolute;
     bottom: $small-number;
     line-height: 1rem;
-    &.left { left: 1px; }
-    &.right { right: 1px; }
+    &.left { left: 0; }
+    &.right { right: 0; }
   }
 }
 
